# statepilot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  scorecard.yml
examples/: research_pipeline.py
src/statepilot/: __about__.py  __init__.py  decorator.py  exceptions.py  machine.py  pilot.py
src/statepilot/adapters/: __init__.py  langgraph.py
tests/: conftest.py  test_adapter_langgraph.py  test_decorator.py  test_hardening.py  test_machine.py  test_parametrized.py  test_pilot.py  test_yaml.py
