[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "statepilot"
version = "0.1.0"
description = "Deterministic state-machine guards for AI-agent workflows: enforce which tools an agent may call, in which order, with loop detection, cost budgets and step caps."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "StudioMeyer", email = "hello@studiomeyer.io" }]
keywords = [
    "agent",
    "state-machine",
    "guardrails",
    "llm",
    "langgraph",
    "workflow",
    "determinism",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.6",
    "pyyaml>=6.0",
    "types-pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/studiomeyer-io/statepilot"
Repository = "https://github.com/studiomeyer-io/statepilot"
Issues = "https://github.com/studiomeyer-io/statepilot/issues"
Changelog = "https://github.com/studiomeyer-io/statepilot/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/statepilot"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/examples", "/README.md", "/LICENSE"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "PTH",  # flake8-use-pathlib
    "TID",  # flake8-tidy-imports
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # allow `assert False` style in tests if needed
# __init__.py groups __all__ by concern (core vs. exceptions) with comments on
# purpose; a single isort-style sort would scatter those groups. Every other
# module keeps a flat, sorted __all__ enforced by RUF022.
"src/statepilot/__init__.py" = ["RUF022"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
files = ["src"]

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["statepilot"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
